[gd_scene load_steps=17 format=3 uid="uid://7jre5k5tbo8n"]

[ext_resource type="Script" uid="uid://cks5r5qccsg2t" path="res://scripts/jumpscare.gd" id="1_yfyrm"]
[ext_resource type="Texture2D" uid="uid://b8juqjb1gl6xj" path="res://assets/aseprite/jumpscare-Sheet.png" id="2_uhh4h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_25u87"]
atlas = ExtResource("2_uhh4h")
region = Rect2(0, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggdb2"]
atlas = ExtResource("2_uhh4h")
region = Rect2(160, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdk1o"]
atlas = ExtResource("2_uhh4h")
region = Rect2(320, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfyrm"]
atlas = ExtResource("2_uhh4h")
region = Rect2(480, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhh4h"]
atlas = ExtResource("2_uhh4h")
region = Rect2(640, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_gngul"]
atlas = ExtResource("2_uhh4h")
region = Rect2(800, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_y74jy"]
atlas = ExtResource("2_uhh4h")
region = Rect2(960, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_fumpe"]
atlas = ExtResource("2_uhh4h")
region = Rect2(1120, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndfk3"]
atlas = ExtResource("2_uhh4h")
region = Rect2(1280, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sag2"]
atlas = ExtResource("2_uhh4h")
region = Rect2(1440, 0, 160, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_qkmh7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_25u87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggdb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdk1o")
}],
"loop": false,
"name": &"bite",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfyrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhh4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gngul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y74jy")
}],
"loop": false,
"name": &"bleed",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fumpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndfk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sag2")
}],
"loop": true,
"name": &"chew",
"speed": 16.0
}]

[sub_resource type="Animation" id="Animation_uhh4h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, 10)]
}

[sub_resource type="Animation" id="Animation_yfyrm"]
resource_name = "zoom"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(11, 10), Vector2(9.2, 8.178)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uhh4h"]
_data = {
&"RESET": SubResource("Animation_uhh4h"),
&"zoom": SubResource("Animation_yfyrm")
}

[node name="Jumpscare" type="CanvasLayer"]
script = ExtResource("1_yfyrm")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(706, 535)
scale = Vector2(11, 10)
sprite_frames = SubResource("SpriteFrames_qkmh7")
animation = &"bite"
frame = 2
frame_progress = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_uhh4h")
}

[node name="DelayTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.6
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animated_sprite_animation_finished"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
